# 8051_blood

./: 7seg.c  7seg.h  CMakeLists.txt  Preload.cmake  blood.c  blood.h  build.bat  delay.c  delay.h  key.c  key.h  main.c  toolchain.cmake
